<resources>
    <string name="app_name">WiScan-App</string>
    <string name="ssid_label">SSID: %1$s</string>
    <string name="bssid_label">BSSID: %1$s</string>
    <string name="security_label">Security: %1$s</string>
    <string name="coordinates_label">Coordinates: %1$s</string>
    <string name="postal_code_label">Postal Code: %1$s</string>
    <string name="neighborhood_label">Neighborhood: %1$s</string>
    <string name="total_networks_label">%1$s Networks %2$s</string>
    <string name="total_networks_label2">Total Networks: %1$s</string>
    <string name="hi">Welcome</string>
    <string name="thomas">Thomas</string>
    <string name="guidance">Help</string>
    <string name="wifi">Scanned Network List</string>
    <string name="location">Map</string>
    <string name="additional_information">Additional Information</string>
    <string name="change_language">Change Language</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_text">
    The “WiScan” (We Scan) app is designed solely for the purpose of capturing local WiFi data (BSSIDs, SSIDs, security protocols, and corresponding location data), cleaning the data, displaying progress to the user, and sending the data for advanced visualizations such as graphs and maps. The app allows configuration through user controls like WiFi scan frequency and radius.\n\n
    Important Notice:\n\n
    - The WiScan app must be used exclusively for its intended purpose as described above.\n\n
    - Users are prohibited from using the app for any malicious activities, including but not limited to unauthorized access, interference with network security, or privacy violations.\n\n
    - By using the WiScan app, you agree to abide by all applicable laws and regulations regarding data collection and privacy.\n\n
    - The developers of WiScan are not responsible for any misuse of the app.
        
        
</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string-array name="language_array">
        <item>English</item>
        <item>French</item>
        <item>Russian</item>
    </string-array>
    <string name="provider_label">Provider : %1s</string>
    <string name="settings">SETTINGS</string>
    <string name="sort_by_ssid">Sort by SSID</string>
    <string name="sort_by_security_protocol">Sort by Security Protocol</string>
    <string name="sort">Sort</string>
    <string name="cpuTemperature">"CPU Temperature: "</string>
    <string name="cpu_time">"CPU Time: "</string>
    <string name="scanning_status">"Scanning Status: "</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="activeActivity">Active Networks List</string>
    <string name="button_export_csv">Export to CSV</string>
    <string name="search_hint">Search for SSID</string>
    <string name="filter_by_security">Filter by Security</string>
    <string name="default_view">Default View</string>
    <string name="faq_what_is_nsgs">What is WiScan App?</string>
    <string name="faq_start_wifi_scan">How do I see a WiFi scan?</string>
    <string name="faq_configure_wifi_settings">How do I configure the WiFi scan settings?</string>
    <string name="faq_view_scanned_data">Where can I see the scanned WiFi data?</string>
    <string name="answer_what_is_nsgs">The WiScan (We Scan) App is designed to capture local WiFi data, clean it, display progress to the user, and send the data for advanced visualizations such as graphs and maps.</string>
    <string name="answer_start_wifi_scan">To see scanned network, navigate to the Scanned Network List section, and press the button. The app will begin fetching the data from the cloud to show in this list.</string>
    <string name="answer_configure_wifi_settings">You can configure the WiFi scan settings by going to the Main page and clicking on the three dots at the top right corner of the header. Here you can adjust the scan frequency, units of temperature and language to your needs. Ensure that your Pi is powered on, and connected to a hotspot. You should status feedback on the Pi\'s LCD screen. Ensure that the GPS sensor is not close to the Pi during the booting for the first time or rebooting the Pi.</string>
    <string name="answer_view_scanned_data">The scanned WiFi data is displayed in the Scanned Network List section. This section provides a detailed view of the networks captured during the scan, including their BSSIDs, SSIDs, and security protocols.</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="settingsTitle">Settings</string>
    <string name="help_title">Help</string>
    <string name="temperature_unit_text_view">Temperature Unit</string>
    <string name="Celsius" translatable="false">Celsius</string>
    <string name="Fahrenheit" translatable="false">Fahrenheit</string>
    <string-array name="measurementsArray">
        <item>@string/Celsius</item>
        <item>@string/Fahrenheit</item>
    </string-array>
    <string name="language_text_view">Language</string>
    <string name="language1">English</string>
    <string name="language2">Français</string>
    <string name="language3">Русский</string>
    <string-array name="languageArray">
        <item>@string/language1</item>
        <item>@string/language2</item>
        <item>@string/language3</item>
    </string-array>
    <string name="db_text_view">Database Refresh Interval</string>
    <string-array name="databaseArray">
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string name="buttonSave">Save</string>
    <string name="multiple_networks">Multiple Networks</string>
    <string name="location_permission_is_required_to_use_this_feature">Location permission is required to use this feature</string>
    <string name="you_are_here">You are here</string>
    <string name="networks_at_this_location">Networks at this location</string>
    <string name="shutdown_button">Shutdown Button</string>
    <string name="shutdown_command">Shutdown command</string>
    <string name="is_currently_inactive_you_can_safely_click_the_button">" is currently inactive. You can safely click the button."</string>
    <string name="in_progress">"  in progress"</string>
    <string name="acknowledged_by_device_and_is_in_progress">"  acknowledged by device and is in progress"</string>
    <string name="timed_out">"  timed out"</string>
    <string name="state">" state"</string>
    <string name="unknown">"Unknown "</string>
    <string-array name="languageCode">
        <item>en</item>
        <item>fr</item>
        <item>ru</item>
    </string-array>
    <string name="types_of_security">Types of Security</string>
    <string name="wifi_networks">WiFi Networks</string>
    <string name="WPA2">WPA2</string>
    <string name="WPA3">WPA3</string>
    <string name="WEP">WEP</string>
    <string name="a_4GHZ">4GHz</string>
    <string name="a_5GHZ">5GHz</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="wpa2_description">Wi-Fi Protected Access II (WPA2) is a network security technology commonly used on Wi-Fi wireless networks. It is an improvement over WPA and provides stronger data protection and network access control.</string>
    <string name="wpa3_description">Wi-Fi Protected Access III (WPA3) is the latest generation of Wi-Fi security, providing more robust authentication and improved cryptographic strength.</string>
    <string name="wep_description">Wired Equivalent Privacy (WEP) is a security protocol for wireless networks that provides data confidentiality comparable to a traditional wired network. However, it is considered to be the least secure due to various vulnerabilities.</string>
    <string name="a_4ghz_description">4GHz refers to the frequency band used by some Wi-Fi networks. It is commonly used due to its compatibility with a wide range of devices, though it is susceptible to interference.</string>
    <string name="a_5ghz_description">5GHz is another frequency band used by Wi-Fi networks. It provides faster speeds and less interference compared to the 2.4GHz band but has a shorter range.</string>
    <string name="common_vulnerabilities_and_attacks">Common Vulnerabilities and Attacks</string>
    <string name="wep_vulnerabilities">WEP Vulnerabilities:</string>
    <string name="wep_vulnerabilities_description">WEP is vulnerable to several attacks due to its use of static keys and weak initialization vectors. Common attacks include the "FMS attack," which exploits these weaknesses to quickly crack WEP keys.</string>
    <string name="wpa_wpa2_attacks">WPA/WPA2 Attacks:</string>
    <string name="wpa_wpa2_attacks_description">WPA and WPA2 are susceptible to brute-force attacks if weak passwords are used. Additionally, the "KRACK" (Key Reinstallation Attack) discovered in 2017 exploits a vulnerability in the WPA2 handshake process, allowing attackers to intercept and decrypt data.</string>
    <string name="wpa3_security_enhancements">WPA3 Security Enhancements:</string>
    <string name="wpa3_security_enhancements_description">WPA3 addresses many of the vulnerabilities present in WPA2. The SAE (Simultaneous Authentication of Equals) handshake in WPA3 provides protection against offline dictionary attacks, and the use of individualized data encryption enhances security in public networks.</string>
    <string name="network_security_best_practices">Network Security Best Practices</string>
    <string name="use_strong_passwords">1. Use Strong Passwords: Ensure your Wi-Fi network uses a strong, unique password to prevent unauthorized access.</string>
    <string name="enable_encryption">2. Enable Encryption: Always enable WPA3 or WPA2 encryption on your router for enhanced security.</string>
    <string name="update_firmware">3. Update Firmware: Regularly update your routers firmware to patch security vulnerabilities and improve performance.</string>
    <string name="use_firewalls">4. Use Firewalls: Enable the firewall on your router to protect your network from external threats.</string>
    <string name="disable_wps">5. Disable WPS: Wi-Fi Protected Setup (WPS) can be a security risk. Disable it if not needed.</string>
    <string name="cluster_radius_menu">Set Cluster Radius</string>
    <string name="choose_cluster">Choose Cluster Radius</string>
    <string name="set_cluster_very_small">Cluster Radius: Very Small (0.00005)</string>
    <string name="set_cluster_small">Cluster Radius: Small (0.0001)</string>
    <string name="set_cluster_medium">Cluster Radius: Medium (0.0005)</string>
    <string name="set_cluster_large">Cluster Radius: Large (0.001)</string>
    <string name="set_cluster_very_small_confirmed">Cluster Radius: Very Small</string>
    <string name="set_cluster_small_confirmed">Cluster Radius: Small</string>
    <string name="set_cluster_medium_confirmed">Cluster Radius: Medium</string>
    <string name="set_cluster_large_confirmed">Cluster Radius: Large</string>
    <string name="ok_button_confirmed">OK</string>
    <string name="cancel_button_confirmed">Cancel</string>
    <string name="Statistics" >"Statistics"</string>
    <string name="pie_chart_1" >Protocols Chart</string>
    <string name="pie_chart_2" >Providers Chart</string>
    <string name="security_protocol">Security Protocols</string>
    <string name="network_provider">Network Providers"</string>
    <string name="home_bar_title">Home</string>
    <string name="stats_bar_title">Statistics</string>
    <string name="info_activity_bar_title">Additional Information</string>
    <string name="map_activity_bar_title">Map Activity</string>
    <string name="network_detail_activity_bar_title">Details</string>
    <string name="wifi_activity_bar_title">Discovered Networks</string>
    <string name="activity_networks_bar_title">Active Networks</string>
</resources>