<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsTitle"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_unit_text_view"
        android:paddingBottom="16dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerMetric"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:background="#D3D3D3"
        android:entries="@array/measurementsArray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_text_view"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:background="#D3D3D3"
        android:entries="@array/languageArray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_text_view"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerDB"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:background="#D3D3D3"
        android:entries="@array/databaseArray" />

    <Button
        android:id="@+id/buttonShutdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shutdown_button"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
