<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_settings"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_by_ssid"
                android:title="@string/sort_by_ssid" />
            <item
                android:id="@+id/sort_by_security"
                android:title="@string/sort_by_security_protocol" />

            <item android:id="@+id/action_filter_wep"
                  android:title="Filter by WEP" />
            <item android:id="@+id/action_filter_wpa"
                  android:title="Filter by WPA" />
            <item android:id="@+id/action_filter_wpa2"
                  android:title="Filter by WPA2" />
            <item android:id="@+id/action_filter_wpa3"
                  android:title="Filter by WPA3" />
            <item android:id="@+id/action_filter_unprotected"
                android:title="Filter by unprotected" />
        </menu>




    </item>
</menu>
