<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/disclaimer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/language_button"
            android:text="@string/disclaimer_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"/>

        <ImageButton
            android:id="@+id/language_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="1dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/change_language"
            android:scaleType="fitCenter"
            android:src="@drawable/earth_lang" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/disclaimer_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/disclaimer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_text"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/roboto_regular"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_regular"/>

        <Button
            android:id="@+id/decline_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/decline"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_regular"/>
    </LinearLayout>

</LinearLayout>
